--- a/homepage_styles_min_device_width_700px.css
+++ b/homepage_styles_min_device_width_700px.css
@@ -1,6 +1,4 @@
 
-
-
 body{
     margin: 0px;
 }
@@ -13,12 +11,11 @@ body{
         height: 90px; width: 100%;
         display: flex; align-items: center; justify-content: space-between;
     }
-    
+
     .landing-container{
         display: flex; flex-direction: column; justify-content: space-between;
         overflow: hidden;
-        position: relative;
-        top: 50%; transform: translateY(-50%);
+        position: relative; top: 50%; transform: translateY(-50%);
     }
     .blurb-and-arrow{
         width: 100%;
@@ -27,30 +24,26 @@ body{
     .blurb{
         width: 300px;
         padding: 10px 20px;
-        background-color: #00000049;
-        backdrop-filter: blur(2px);
+        background-color: #00000049; backdrop-filter: blur(2px);
         color: white;
     }
 
     .intro{display: flex; align-items: center;}
     .intro-feature h2, .contributors h2{font-size: 5rem; margin: 20px 0px 0px;}
-    .number{font-size: 25rem;}
-    .intro-text h2, .history-main h2, .explore-section-description h2, .emphasis{font-size: 10rem; margin: 0px;}
+    .number{font-size: 28rem;}
+    .intro-text h2, .history-main h2, .explore-section-description h2, .emphasis{font-size: 9rem; margin: 0px;}
 
     .history-main{overflow: hidden;}
 
-    .explore-intro .intro-feature h2{color: black;}
+    .explore-intro .intro-feature h2{color: white;}
 }
 
 @media screen and (min-width: 700px) and (max-height: 800px) {
     .wrapper{
-        height: 100vh;
-        width: 100vw;
+        height: 100vh; width: 100vw;
         display: flex;   
-        overflow-x: auto;
-        overflow-y: hidden;
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
+        overflow-x: auto; overflow-y: hidden;
+        scroll-behavior: smooth; scroll-snap-type: x mandatory;
     }
 
     .wrapper > * {
@@ -74,26 +67,24 @@ body{
         font-size: 2rem;
     }
 
-    nav .title{
-        height: 90%; width: 100%;
-    }
+    nav .title{height: 90%; width: 100%;}
     .title-alt-1{display: none;}
     .title-alt-2{text-align: center;}
 
     /*drop down menu*/
     .drop-down-menu{
-        height: 95%; width: 75vw;
+        height: 95%; width: 80vw;
         position: fixed; left: 100px; top: 50%; transform: translateY(-50%);
         padding: 0px 50px;
     }
     .drop-down-header{
-        height: 10%; width: 100%;
-        margin-bottom: 50px;
+        height: 60%; width: 100%;
+        margin-bottom: 30px; padding-top: 7%;
         border-bottom: 1px solid black;
     }
     .drop-down-menu h1{
         margin: 0px;
-        font-size: 5rem;
+        font-size: 5.5rem;
     }
     .drop-down-menu h1:hover{
         cursor: url("cursors/cursor-finger.png"), auto;
@@ -101,31 +92,34 @@ body{
         border-left: 30px solid #800c0c;
         padding-left: 20px;
     }
-    .design-element{position: relative; top: 150px;}
+    .design-element{
+        height: 15%;
+    }
     .design-element img{
         height: 60px; width: 60px;
     }
 
     /*landing section: consists of the landing container, page title, blurb, and arrow button*/
+    .title{font-size: 1.5rem;}
     .landing{height: 100vh; width: 100vw;}
     .landing-container{
-        height: 90vh; width: 80vw;
+        height: 90vh; width: 85vw;
         left: 120px;
+        padding-top: 50px;
     }
     #page-title{margin: -50px 0px;}
     .arrow-button{
         height: 50px; width: 50px;
-        background-color: #153a58;
+        background-color: transparent;
         color: white; font-size: 2rem;
     }
 
     /*intro section: contains intro feature and intro text*/
     .intro{
         height: 100vh;
-        z-index: 10;
     }
     .intro-feature{
-        height: 90%; width: 350px;
+        height: 85vh; width: 350px;
         flex-direction: column; align-items: center; justify-content: space-between;
         padding: 0px 20px;
         border-right: 1px solid white;
@@ -137,7 +131,7 @@ body{
     }
 
     .intro-text{
-        height: 90%; width: 500px;
+        height: 90%; width: 600px;
         display: flex; flex-direction: column; justify-content: space-between;
         padding: 0px 50px;
     }
@@ -154,27 +148,32 @@ body{
     .history{
         height: 100%;
         display: flex; align-items: center;
-        z-index: 10;
     }
     .history-main{
         height: 90%;
         display: flex; flex-direction: column; justify-content: space-between;
         padding: 0px 50px;
     }
-    .history-main .paragraphs{
-        height: 70%;
+    .paragraphs{
+        height: 100%;
         display: flex;
     }
-    .history-main .paragraphs p{
-        width: 950px;
-        margin: 0px 10px;
+    .paragraph-section{
+        width: 1000px;
+        margin: 0px 50px;
+        display: flex; flex-direction: column; justify-content: space-between;
+        text-align: justify;
     }
-
-    .history-image-feature{
-        height: 90%;
-        display: flex; flex-direction: column; align-items: center; justify-content: space-between;
+    .paragraph-images{
+        width: 1000px;
+        display: flex;
     }
-    .history-image-feature img{height: 31.5%; width: 300px;}
+    .paragraph-image{
+        width: 250px;
+        margin-right: 5px;
+    }
+    figcaption{font-size: 0.7rem;}
+    .paragraph-image img{height: 100px; width: 100%;}
 
     .history-conclusion{
         height: 90%; width: 700px;
@@ -203,20 +202,22 @@ body{
         padding: 0px 50px;
     }
     .explore-section-description img{height: 40vh; width: 600px;}
-    .explore-section-description h2{
-        margin: 0px;
-    }
+    .explore-section-description h2{margin: 0px;}
 
     /*breaker image*/
-    .breaker-image{height: 100%; width: 700px;}
+    .breaker-image{height: 100vh; width: 700px;}
 
     /*about section*/
     .about-intro{
-        height: 100%;
+        height: 100vh;
         display: flex; align-items: center;
         padding: 0px 50px;
     }
-    .about-intro .intro-feature{border: none;}
+    .about-intro .intro-feature{
+        height: 80vh;
+        border: none;
+    }
+    .about-intro .number{margin-top: -200px; font-size: 25rem;}
     .about-section{
         height: 100vh;
         padding: 0px 0px 0px 50px;
@@ -244,13 +245,10 @@ body{
 
 @media screen and (min-width: 700px) and (min-height: 801px) and (max-height: 1000px) {
     .wrapper{
-        height: 100vh;
-        width: 100vw;
+        height: 100vh; width: 100vw;
         display: flex;   
-        overflow-x: auto;
-        overflow-y: hidden;
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
+        overflow-x: auto; overflow-y: hidden;
+        scroll-behavior: smooth; scroll-snap-type: x mandatory;
     }
 
     .wrapper > * {
@@ -287,13 +285,13 @@ body{
         padding: 0px 50px;
     }
     .drop-down-header{
-        height: 10%; width: 100%;
-        margin-bottom: 50px;
+        height: 75%; width: 100%;
+        padding-top: 10%;
         border-bottom: 1px solid black;
     }
     .drop-down-menu h1{
         margin: 0px;
-        font-size: 5rem;
+        font-size: 5.5rem;
     }
     .drop-down-menu h1:hover{
         cursor: url("cursors/cursor-finger.png"), auto;
@@ -301,28 +299,31 @@ body{
         border-left: 30px solid #800c0c;
         padding-left: 20px;
     }
-    .design-element{position: relative; top: 150px;}
+    .design-element{
+        height: 15%;
+    }
     .design-element img{
         height: 60px; width: 60px;
     }
 
     /*landing section: consists of the landing container, page title, blurb, and arrow button*/
+    .title{font-size: 2rem;}
     .landing{height: 100vh; width: 100vw;}
     .landing-container{
         height: 90vh; width: 85vw;
         left: 120px;
+        padding-top: 50px;
     }
     #page-title{margin: -50px 0px;}
     .arrow-button{
         height: 80px; width: 80px;
-        background-color: #153a58;
+        background-color: transparent;
         color: white; font-size: 3rem;
     }
 
     /*intro section: contains intro feature and intro text*/
     .intro{
         height: 100vh;
-        z-index: 10;
     }
     .intro-feature{
         height: 100%; width: 350px;
@@ -362,24 +363,35 @@ body{
         display: flex; flex-direction: column; justify-content: space-between;
         padding: 0px 50px;
     }
-    .history-main .paragraphs{
-        height: 75vh;
+
+    .paragraphs{
+        height: 90%;
         margin: 30px auto 0px;
         display: flex;
     }
-    .history-main .paragraphs p{
-        width: 600px;
+    .paragraph-section{
+        width: 650px;
         margin: 0px 10px;
+        display: flex; flex-direction: column; justify-content: space-between;
     }
 
-    .history-image-feature{
-        height: 100%;
-        display: flex; flex-direction: column; align-items: center; justify-content: space-evenly;
+    .paragraph-images{
+        width: 600px;
+        display: flex;
     }
-    .history-image-feature img{height: 150px; width: 200px;}
+    .paragraph-image{
+        width: 180px;
+        margin-right: 5px;
+    }
+    figcaption{
+        font-size: 0.7rem;
+    }
+    .paragraph-image img{
+        height: 100px; width: 100%;
+    }
 
     .history-conclusion{
-        height: 100%; width: 600px;
+        height: 100%; width: 400px;
         padding: 0px 50px;
     }
 
@@ -394,7 +406,6 @@ body{
         height: 100%;
         display: flex; align-items: center;
         padding: 0px 50px;
-        z-index: 10;
     }
     .explore-section-image{height: 90%; width: 400px;}
     .explore-section-description{
@@ -415,11 +426,9 @@ body{
     /*about section*/
     .about-intro{
         height: 100%;
-        margin-left: -50px;
-        border-top-left-radius: 50px;
-        border-bottom-left-radius: 50px;
     }
     .about-intro .intro-feature{border: none;}
+    .about-intro .number{margin-top: -100px;}
     .about-section{
         height: 100vh;
         padding: 0px 0px 0px 50px;
@@ -430,7 +439,7 @@ body{
         display: flex;
     }
     .about-paragraph{width: 800px;}
-    .about-paragraph img{height: 200px; width: 350px;}
+    .about-paragraph img{height: 150px; width: 350px;}
     .contributors{
         height: 100vh;
         margin: 0px 50px;
@@ -441,7 +450,7 @@ body{
         height: 250px; width: 400px;
         display: flex; justify-content: space-between;
     }
-    .contributor img{height: 250px; width: 200px;}
+    .contributor img{height: 150px; width: 150px;}
     .emphasis{width: 1500px;}
 }
 
@@ -456,23 +465,20 @@ body{
     }
 
     nav div{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: flex; align-items: center; justify-content: center;
     }
 
     nav .drop-down-button{
-        height: 100%;
-        width: 15%;
+        height: 100%; width: 15%;
         border-right: 1px solid black;
     }
     .drop-down-button i{
         font-size: 2rem;
     }
 
-    nav .title{
-        height: 100%;
-        width: 85%;
+    .title{
+        height: 100%; width: 85%;
+        font-size: 3rem;
     }
 
     .title-alt-2{display: none;}
@@ -490,8 +496,8 @@ body{
         padding: 0px 5vw;
     }
     .drop-down-header{
-        height: 10%; width: 100%;
-        margin-bottom: 50px;
+        height: 60%; width: 100%;
+        margin-bottom: 50px; padding-top: 10%;
         border-bottom: 1px solid black;
     }
     .drop-down-menu h1{
@@ -501,10 +507,9 @@ body{
     .drop-down-menu h1:hover{
         cursor: url("cursors/cursor-finger.png"), auto;
         transition: 0.5s ease;
-        border-left: 20px solid #800c0c;
-        padding-left: 10px;
+        border-left: 20px solid #800c0c; padding-left: 10px;
     }
-    .design-element{position: relative; top: 40%;}
+    .design-element{height: 20%;}
     .design-element img{
         height: 60px; width: 60px;
     }
@@ -517,23 +522,16 @@ body{
         top: 120px; left: 50%;
         transform: translateX(-50%);
     }
-
     .landing-container h1{
         margin: 0px;
         font-size: 12rem;
         color: white;
     }
-
-    
     .blurb{
         width: 300px;
         color: white;
     }
-    .arrow-button{
-        height: 80px; width: 80px;
-        background-color: var(--font-color-1);
-        color: white; font-size: 3rem;
-    }
+    .arrow-button{display: none;}
 
     /*intro section*/
     .intro{
@@ -573,22 +571,25 @@ body{
     }
     .history-main{
         height: 100%; width: 100%;
-        display: flex; flex-direction: column-reverse; justify-content: space-between;
+        display: flex; flex-direction: column; justify-content: space-between;
         padding: 50px 50px;
     }
-    .history-image-feature{
-        width: 95%;
-        margin: 20px auto;
-        display: flex; align-items: center; justify-content: space-evenly;
+    .paragraph-section{margin: 20px auto;}
+    .paragraph-images{
+        width: 100%;
+        display: flex;
+        margin: 50px auto;
     }
-    .history-image-feature img{
-        height: 150px; width: 30%;
-        margin: 10px auto;
+    .paragraph-image{
+        width: 30%;
+        margin-right: 5px;
+    }
+    .paragraph-image img{
+        height: 200px; width: 100%;
     }
     .history-conclusion{
         width: 100%;
-        margin: 50px 0px;
-        padding: 0px 50px;
+        margin: 50px 0px; padding: 0px 50px;
     }
 
     /*explore section*/
@@ -597,9 +598,7 @@ body{
         display: flex;
     }
     .explore-intro .intro-feature{width: 400px;}
-    .explore-intro .blurb{
-        height: 50px;
-    }
+    .explore-intro .blurb{height: 50px; width: 100%;}
     .explore-section{
         width: 100%;
         display: flex; flex-wrap: wrap;
@@ -629,37 +628,30 @@ body{
     .about-intro .intro-feature{
         height: 350px; width: 90vw;
         margin: 0px auto;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-evenly;
+        flex-direction: row; align-items: center; justify-content: space-evenly;
         border: none;
         padding-bottom: 50px;
     }
-    .about-intro .intro-feature h1{
-        margin: 0px;
+    .about-intro .number{
+        margin-top: -250px;
     }
 
     .about-section{
         width: 100vw;
-        display: flex;
-        flex-wrap: wrap-reverse;
-        align-items: center;
+        display: flex; flex-wrap: wrap-reverse; align-items: center;
         padding: 50px 0px;
     }
     .about-section h2{
         font-size: 4rem;
         color: #525252;
     }
-
     .about-info{
         width: 90%;
         margin: 50px auto;
     }
-
-    .about-section img{
-        height: 200px; width: 300px;
-    }
-
+    .about-section img{height: 200px; width: 500px;}
+    .contributors{margin: 200px auto 0px;}
+    .contributor img{height: 150px; width: 150px;}
     .emphasis{
         width: 90%;
         margin: 0px auto;
